<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_home"
        android:orderInCategory="100"
        android:title="@string/action_home"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_show"
        android:orderInCategory="100"
        android:title="후기보기"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_write"
        android:orderInCategory="100"
        android:title="@string/commun_write"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_community"
        android:orderInCategory="100"
        android:title="@string/community"
        app:showAsAction="never"
        />


</menu>