<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/mountain">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:titleTextColor="#ffffff"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_vertical_margin">
        <TextView
            android:layout_width="60sp"
            android:layout_height="30sp"
            android:text="@string/title" />
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="30sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_vertical_margin">
        <TextView
            android:layout_width="60sp"
            android:layout_height="30sp"
            android:text="@string/id" />
        <TextView
            android:id="@+id/ID"
            android:layout_width="match_parent"
            android:layout_height="30sp" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:text="@string/date" />

        <TextView
            android:id="@+id/date"
            android:layout_width="170dp"
            android:layout_height="56dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_vertical_margin">
        <TextView
            android:layout_width="60sp"
            android:layout_height="350dp"
            android:text="@string/content" />

        <TextView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="350dp" />
    </LinearLayout>


</LinearLayout>